Add the mq_js_bundle.js to the repo

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <body>
         <canvas id="glcanvas" tabindex="1"></canvas>
-        <script src="gl.js"></script>
+        <script src="assets/mq_js_bundle.js"></script>
         <script>
             document.addEventListener('keydown', onKeyDown, false);
 
